# AI-OCR-Smart-Pipeline

./: .bandit  .gcloudignore  .gitignore  CLAUDE.md  FAILED_REPORT.md  GEMINI.md  README.md  error_logs.json  extracted_data.json  firestore.indexes.json  input_files.txt  input_list.txt  invoice_logs.json  main.py  order_form_logs.json  output_list.txt  processing_logs.json  pyproject.toml  quarantine_list.txt  quarantine_list_v2.txt  quarantine_logs.json  report_tanaka.md  report_yamada.md  requirements-dev.txt  ruff_error.txt  ruff_final_error.txt  ruff_recovery_error.txt  startup_logs.json  sweeper_logs.json  sweeper_startup_error.json  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_5.txt  test_output_6.txt  test_output_7.txt  verify_imports.py
.claude/: settings.local.json
.github/workflows/: ci.yml
ci/: cloudbuild.yaml  pyproject.toml
config/: alerts.yaml  filename_config.yaml  quality_rules.yaml
deploy/: .env.staging  Dockerfile  Dockerfile.api  Dockerfile.ui  cloudbuild.yaml  deploy.sh  env.example  nginx.conf  verify.sh
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  OPERATIONS.md  USER_GUIDE.md
docs/setup/: 00_initial_setup.md
docs/specs/: 01_idempotency.md  02_retry.md  03_saga.md  04_confidence.md  05_schema.md  06_linters.md  07_monitoring.md  08_security.md  09_review_ui.md  10_autosave.md  11_conflict.md  12_alerting.md
scripts/: deploy-functions.sh  generate_test_pdfs.py
src/api/: deps.py  main.py  models.py
src/api/routes/: __init__.py  dashboard.py  documents.py  drafts.py  upload.py
src/core/: bigquery_client.py  budget.py  database.py  docai.py  extraction.py  filename_config.py  gemini.py  lock.py  prompts.py  saga.py  schema_detector.py  schemas.py  storage.py
src/core/linters/: gate.py  quality.py
src/functions/alert/: main.py
src/functions/processor/: __init__.py  main.py  requirements.txt
src/functions/recovery/: main.py  requirements.txt
src/ui/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
src/ui/src/: App.tsx  main.tsx
src/ui/src/api/: client.ts
src/ui/src/components/: ErrorBoundary.tsx  Layout.tsx  StatusBadge.tsx  StatusIcon.tsx
src/ui/src/components/ui/: button.tsx  card.tsx  input.tsx  toast.tsx
src/ui/src/core_utils/: utils.ts
src/ui/src/hooks/: useAutosave.ts  useDraftRecovery.ts  useOptimisticSave.ts
src/ui/src/pages/: DashboardPage.tsx  DocumentEditorPage.tsx  DocumentListPage.tsx  UploadPage.tsx
src/ui/src/types/: index.ts
temp_deploy/: main.py
temp_deploy/src/core/: alerting.py  audit.py  bigquery_client.py  extraction.py  gemini.py  lock.py  logging.py  metrics.py  prompts.py
temp_deploy/src/core/linters/: gate.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform/environments/production/: main.tf  terraform.tfvars.example  variables.tf
terraform/environments/staging/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudrun/: main.tf  outputs.tf  variables.tf
terraform/modules/firestore/: main.tf  outputs.tf  variables.tf
terraform/modules/functions/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
tests/: README.md  conftest.py  reproduce_issues.py
tests/integration/: __init__.py  test_extraction_pipeline.py
tests/performance/: test_performance.py
tests/unit/: test_alerting.py  test_api.py  test_audit.py  test_bigquery_client.py  test_budget.py  test_database.py  test_docai.py  test_extraction.py  test_gate_linter.py  test_gemini.py  test_lock.py  test_logging.py  test_metrics.py  test_prompts.py  test_quality_linter.py  test_saga.py  test_schemas.py  test_storage.py
tests/unit/core/: test_database_serialization.py
